--- a/WinUITestApp/MainWindow.xaml
+++ b/WinUITestApp/MainWindow.xaml
@@ -8,7 +8,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <Grid x:Name="grid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Button ToolTipService.ToolTip="Tooltip">Hello</Button>
+        <TextBlock>Test</TextBlock>
+    </Grid>
 </Window>
